<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">

    <EditText
        android:id="@+id/usernameFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameFieldSignUp"
        android:layout_alignRight="@+id/usernameFieldSignUp"
        android:layout_below="@+id/usernameFieldSignUp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailFieldSignUp"
        android:layout_alignStart="@+id/emailFieldSignUp"
        android:layout_below="@+id/emailFieldSignUp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatPasswordFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordFieldSignUp"
        android:layout_alignStart="@+id/passwordFieldSignUp"
        android:layout_below="@+id/passwordFieldSignUp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCompleteSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/repeatPasswordFieldSignUp"
        android:layout_alignLeft="@+id/repeatPasswordFieldSignUp"
        android:layout_alignRight="@+id/repeatPasswordFieldSignUp"
        android:layout_alignStart="@+id/repeatPasswordFieldSignUp"
        android:layout_below="@+id/repeatPasswordFieldSignUp"
        android:layout_marginTop="68dp"
        android:text="@string/sign_up" />

</RelativeLayout>
