<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">

    <EditText
        android:id="@+id/usernameFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordFieldSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameFieldSignUp"
        android:layout_alignStart="@+id/usernameFieldSignUp"
        android:layout_below="@+id/usernameFieldSignUp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passwordFieldSignUp"
        android:layout_alignLeft="@+id/passwordFieldSignUp"
        android:layout_alignRight="@+id/passwordFieldSignUp"
        android:layout_alignStart="@+id/passwordFieldSignUp"
        android:layout_below="@+id/passwordFieldSignUp"
        android:layout_marginTop="54dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonLogIn"
        android:layout_alignLeft="@+id/buttonLogIn"
        android:layout_alignRight="@+id/buttonLogIn"
        android:layout_alignStart="@+id/buttonLogIn"
        android:layout_below="@+id/buttonLogIn"
        android:text="@string/sign_up" />
</RelativeLayout>
